tests/snapshots/scenarios__incomplete_stream.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "turn_id": 1,
      "update": {
        "first_index": 1,
        "items": [
          {
            "content": "hi",
            "kind": "user",
            "sent_at_ms": "[sent_at_ms]"
          }
        ]
      }
    }
  },
  {
    "TextDelta": {
      "delta": "partial"
    }
  },
  "ResponseDraftRejected",
  {
    "TurnError": {
      "kind": "invalid_response",
      "message": "invalid response: stream ended without message_stop"
    }
  }
]
