tests/snapshots/scenarios__plain_turn.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "turn_id": 1,
      "update": {
        "first_index": 1,
        "items": [
          {
            "content": "hi",
            "kind": "user",
            "sent_at_ms": "[sent_at_ms]"
          }
        ]
      }
    }
  },
  {
    "TextDelta": {
      "delta": "hello"
    }
  },
  {
    "TokenUsage": {
      "background": false,
      "cost_usd": null,
      "tokens_per_sec": "[tps]",
      "usage": {
        "completion_tokens": 1,
        "context_tokens": 11,
        "prompt_tokens": 10
      }
    }
  },
  "ResponseDraftAccepted",
  {
    "HistoryAppended": {
      "delta": {
        "first_index": 2,
        "items": [
          {
            "content": "hello",
            "kind": "assistant"
          }
        ]
      },
      "turn_id": 1
    }
  },
  {
    "TurnComplete": {
      "meta": {
        "avg_tps": "[avg_tps]",
        "elapsed_ms": "[elapsed_ms]",
        "interrupted": false
      },
      "turn_id": 1
    }
  }
]
