tests/snapshots/scenarios__provider_auth_error.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "history": [
        {
          "content": "hi",
          "kind": "user"
        }
      ],
      "turn_id": 1
    }
  },
  {
    "TurnError": {
      "message": "authentication failed: {\"error\":{\"message\":\"invalid api key\",\"type\":\"authentication_error\"}}"
    }
  }
]
